--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,16 @@
-body {
-    background: transparent; /* Make it white if you need */
-    padding: 0 24px;
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  
-  .App {
-    color: #72a24d;
-  }
+table {
+  border-collapse: collapse;
+}
+
+td, th {
+  border: 1px solid black;
+}
+
+tr {
+  cursor: pointer;
+}
+
+tr:hover {
+  box-shadow: 0 0 4px gray;
+  font-size: large;
+}
